Adjust tab margins to reflect those in the official theme

--- a/source/skin/messenger.css
+++ b/source/skin/messenger.css
@@ -17,6 +17,8 @@
     background-image: linear-gradient(to top,
                                       var(--arc-border-color) 1px,
                                       transparent 1px);
+    margin-top: 1px;
+    margin-left: -10px;
 }
 
 #bottom-events-box,
