Fix wrong comma in selector

--- a/source/styling.less
+++ b/source/styling.less
@@ -75,7 +75,7 @@
     &#messengerWindow[ait-frame-contents-preference="light"]
         svg:-moz-any([id|="ait-frame-toolset-button"], [id|="ait-tab-close"]),
     &#messengerWindow:-moz-any([ait-main-toolbox-preference="light"],
-                               [ait-main-toolbox-preference="darker"]),
+                               [ait-main-toolbox-preference="darker"])
         svg:-moz-any([id|="ait-selected-tab-close"],
                      [id|="ait-pane-toolset-button"]),
     &:-moz-any(#calendar-event-dialog,
