--- a/source/windows-styling/tabs.scss
+++ b/source/windows-styling/tabs.scss
@@ -10,18 +10,35 @@
 
 #{ main-win(main-window-frame-icons-styling enabled) } {
 
-    :-moz-any(#calendar-tab-button, #task-tab-button) .toolbarbutton-icon {
+    #tabcontainer .tabmail-arrowscrollbox :-moz-any(.scrollbutton-up, .scrollbutton-down) .toolbarbutton-icon,
+    :-moz-any(#calendar-tab-button, #task-tab-button) .toolbarbutton-icon,
+    #alltabs-button > dropmarker .dropmarker-icon {
         width: 16px !important;
         height: 16px !important;
         list-style-image: none !important;
+        background-image: var(--ait-tab-btn-icon);
     }
 
-    #calendar-tab-button .toolbarbutton-icon {
-        background-image: var(--ait-calendar-tab-icon);
+    #calendar-tab-button {
+        --ait-tab-btn-icon: var(--ait-calendar-tab-icon);
     }
 
-    #task-tab-button .toolbarbutton-icon {
-        background-image: var(--ait-task-tab-icon);
+    #task-tab-button {
+        --ait-tab-btn-icon: var(--ait-task-tab-icon);
+    }
+
+    #alltabs-button {
+
+        --ait-tab-btn-icon: var(--ait-frame-toolbox-down-arrow-icon);
+
+        &:-moz-any(:active, [open="true"]) {
+            --ait-tab-btn-icon: url("chrome://ait/content/icons.svg?toolset-btn-active#down");
+        }
+
+    }
+
+    #tabcontainer .tabmail-arrowscrollbox :-moz-any(.scrollbutton-up, .scrollbutton-down) {
+        --ait-tab-btn-icon: var(--ait-frame-toolbox-left-arrow-icon);
     }
 
 }
@@ -79,7 +96,6 @@
     #tabs-toolbar {
 
         padding-top: 1px;
-        margin-left: -10px;
         position: relative;
         box-shadow: inset 0 -1px var(--ait-tab-and-toolbox-upper-border-color);
 
